# counterpart-challenge

./: .env.example  README.md  thunder-collection_API_postman.json
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/main/: earthquake_service.py  models.py  urls.py  utils.py
backend/main/apis/: cities_list.py  city_create.py  nearest_earthquakes.py
backend/main/migrations/: 0001_initial.py  0002_searchhistory.py
backend/main/selectors/: cities_list.py  search.py
backend/main/services/: search_create.py
backend/main/tests/: factories.py
backend/main/tests/apis/: test_city_create.py  test_nearest_earthquakes.py
backend/main/tests/selectors/: test_cities_list.py  test_search.py
backend/main/tests/services/: test_city_create.py
backend/services/: settings.py  urls.py
frontend/: README.md
main/: exception_handlers.py  models.py  urls.py
main/apis/: nearest_earthquakes.py  search_history_list.py
main/fixtures/: initial_data.json
main/selectors/: search.py  search_history_list.py
main/services/: city_create.py
main/tests/: factories.py
main/tests/apis/: test_cities_list.py  test_search_history_list.py
main/tests/selectors/: test_history_search_list.py  test_search.py
thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
