[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alberto Paparelli <alberto@paparelli.com.ar>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-cors-headers = "^3.14.0"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
