[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alberto Paparelli <alberto@paparelli.com.ar>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-cors-headers = "^3.14.0"
djangorestframework = "^3.14.0"
requests = "^2.30.0"
numpy = "^1.24.3"
geopy = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
factory-boy = "^3.2.1"
flake8 = "^6.0.0"
ipython = "^8.13.2"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
